--- a/templates/index.html
+++ b/templates/index.html
@@ -15,11 +15,14 @@
     <link href="{% static 'css/colors.css' %}" rel="stylesheet">
     <link href="{% static 'css/image.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/c3.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/rzslider.min.css' %}" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/angularjs-slider/6.1.1/rzslider.min.css" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/favicons/apple-touch-icon.png' %}">
     <link rel="icon" type="image/png" href="{% static 'images/favicons/favicon-32x32.png' %}" sizes="32x32">
     <link rel="icon" type="image/png" href="{% static 'images/favicons/favicon-16x16.png' %}" sizes="16x16">
     <link rel="shortcut icon" href="{% static 'images/favicons/favicon.ico' %}">
+
+    <link rel="stylesheet" href="{% static 'css/jquery-ui.css' %}">
 
     <link rel="manifest" href="{% static 'images/favicons/manifest.json' %}">
     <link rel="mask-icon" href="{% static 'images/favicons/safari-pinned-tab.svg' %}" color="#5bbad5">
@@ -50,6 +53,7 @@
 
     <script type="text/javascript" src="{% static 'js/common/script.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/common/jquery-3.1.0.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/common/jquery-ui.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/common/bootstrap.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/common/angular.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/common/ocLazyLoad.min.js' %}"></script>
@@ -58,6 +62,8 @@
     <script type="text/javascript" src="{% static 'js/common/angular-route.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/common/angular-ga.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/common/collapse.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/common/rzslider.min.js' %}"></script>
+
 
     <script type="text/javascript" src="{% static 'js/matte.module.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/matte.config.js' %}"></script>
