--- a/templates/index.html
+++ b/templates/index.html
@@ -74,6 +74,7 @@
     <script type="text/javascript" src="{% static 'js/core/chart-draw.service.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/storyboard/storyboard.module.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/storyboard/storyboard.component.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/storyboard/storyboard.service.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/footer/footer.module.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/footer/footer.component.js' %}"></script>
 
